<resources>
    <string name="app_name">BackPackGPS</string>
    <string name="hola_mundo">Hola mundo!</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="olvidaste_tu_contrase_a"><u>Olvidaste tu contraseña?</u></string>
    <string name="iniciar_con">Iniciar con</string>
    <string name="iniciar_sesi_n_con_facebook">Iniciar sesión con Facebook</string>
    <string name="iniciar_sesion_con_twitter">iniciar sesion con twitter</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="ya_tienes_una_cuenta_inicia_sesi_n"><u>Ya tienes una cuenta? Inicia sesión</u></string>
    <string name="registrar_con">Registrar con</string>
    <string name="no_tienes_una_cuenta_registrate"><u>No tienes una cuenta? Registrate</u></string>
    <string name="reinciar_contrase_a">Reiniciar Contraseña</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="Descripcion_recuperarcontrasena">Para recuperar tu contraseña ingresa tu nombre de usuario</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_dispositivo">Agregar Dispositivo</string>
    <string name="device_name">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="dispositivos">Dispositivos</string>
    <string name="nombre_del_dispositivo">Nombre del dispositivo</string>
    <string name="detalles_del_dispositivo">Detalles del dispositivo</string>
    <string name="btneliminar">Eliminar</string>
    <string name="btneditar">Editar</string>
    <string name="card_detalles_del_dispositivo">Detalles del dispositivo</string>
    <string name="card_nombre_del_dispositivo">Nombre del dispositivo</string>
</resources>